# cookiecutter-ffy00-py

./: cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  noxfile.py  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: checks.yml  tests.yml
{{cookiecutter.project_name}}/docs/: api.rst  conf.py  index.rst
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
