[metadata]
name = {{ cookiecutter.project_name }}
version = 0.0.0b0
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
license = EUPL 1.2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
url = https://github.com/{{ cookiecutter.github_project }}

[options]
packages = find:
python_requires = >=3.7, <4
#install_requires =

[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    furo
    sphinx==3.*
    sphinx-autodoc-typehints

[flake8]
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = {{ cookiecutter.project_name }}
default_section = THIRDPARTY

[coverage:run]
omit =
    setup.py

[coverage:paths]
source =
    src

[coverage:html]
show_contexts = true
